<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:backgroundTint="@color/light_purp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/toolbar"
            android:id="@+id/player_rv"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>

