...
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/jets" />

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="Team Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
...
