...
                android:gravity="center"
                android:textSize="30sp"
                android:backgroundTint="@color/light_purp"
                />

            <Button
                android:id="@+id/teamRostersMenu"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:text="@string/team_rosters"
...
